@@ -1,5 +1,10 @@
 2004-05-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
+	* check_mem.adb:
+	Do not use secondary task for just start and stop server.
+
+2004-05-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
 	* afile.adb:
 	(CB): Add share mode to file open.
 
